day 1 of tailwind is completed

--- a/JS LEARNING/.vscode/settings.json
+++ b/JS LEARNING/.vscode/settings.json
@@ -25,5 +25,6 @@
   },
   "files.autoSave": "afterDelay",
   "files.autoSaveDelay": 1000,
-  "livePreview.autoRefreshPreview": "onSave"
+  "livePreview.autoRefreshPreview": "onSave",
+  "liveServer.settings.port": 5501
 }
